Fixed flouting layout problem on mobile view after adding "error" class

--- a/style.scss
+++ b/style.scss
@@ -118,7 +118,7 @@ $input-error: hsl(0, 100%, 66%);
     width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
   }
   &__card-cvc {
     padding: 10px 10px;
@@ -135,8 +135,11 @@ $input-error: hsl(0, 100%, 66%);
 }
 
 .error {
-  display: none;
+  visibility: hidden;
+  display: block;
+  height: 17px;
   &--active {
+    visibility: visible;
     display: block;
     color: $input-error;
     font-size: 0.8rem;
